# lemon-pkmn

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
app/: Cargo.toml
app/src/: app.rs  directories.rs  main.rs
app/src/app/: windows.rs
app/src/app/windows/: pkmn_list.rs
codegen/: Cargo.toml
codegen/src/: code_generator.rs  data_generator.rs  fetcher.rs  generator.rs  main.rs  parser.rs
codegen/src/code_generator/: moves.rs  species.rs
codegen/src/generator/: moves.rs  species.rs
codegen/src/parser/: csv.rs  data.rs
codegen/src/parser/csv/: moves.rs  pokemon.rs  pokemon_form_types.rs  pokemon_forms.rs  pokemon_moves.rs  pokemon_species.rs  pokemon_stats.rs  pokemon_types.rs
codegen/src/parser/data/: pokemon_move.rs  species.rs
lib/: Cargo.toml
lib/src/: battle.rs  data.rs  error.rs  generate.rs  lib.rs  storage.rs  types.rs
lib/src/battle/: action.rs  builder.rs  config.rs  error.rs  event.rs  participant.rs  pokemon.rs  side.rs  sim.rs  slot.rs  target.rs  team.rs  types.rs
lib/src/battle/sim/: move_executor.rs
lib/src/battle/types/: action.rs  event.rs  pokemon.rs  side.rs  slot.rs  target.rs  team.rs  type_effectiveness.rs
lib/src/data/: move_id.rs  move_pipeline.rs  moves.rs  moveset.rs  species.rs  species_id.rs
lib/src/generate/: evs.rs  ivs.rs  level.rs  nature.rs  species_id.rs  stored_moves.rs  stored_pokemon.rs  version_group.rs
lib/src/storage/: pokemon.rs  pokemon_move.rs  team.rs
lib/src/types/: generation.rs  move_damage_class.rs  move_method.rs  move_target.rs  nature.rs  pokemon.rs  pokemon_move.rs  pokemon_type.rs  species.rs  species_flags.rs  stat_stages.rs  stats.rs  version.rs  version_group.rs
