[package]
name = "lemon-pkmn-app"
version = "0.1.0"
edition = "2024"

[dependencies]
lemon-pkmn = { workspace = true, features = ["include-data"] }
anyhow = "1.0.100"
bitflags = { workspace = true }
directories = "6.0.0"
eframe = { version = "0.33.3", features = ["persistence", "wgpu"] }
egui = { version = "0.33.3", features = ["persistence"] }
egui_extras = "0.33.3"
egui-file-dialog = "0.12.0"
egui-notify = "0.21.0"
egui-phosphor = { version = "0.11.0", features = ["regular"] }
serde = { workspace = true }