[package]
name = "lemon-pkmn"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
bitcode = { workspace = true }
bitflags = { workspace = true, features = ["serde"] }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = "2.0.18"
zstd = { workspace = true }