[package]
name = "lemon-pkmn"
version = "0.1.0"
edition = "2024"

[features]
default = []
include-data = ["bitcode", "zstd"]
serde = ["dep:serde", "bitflags/serde"]

[dependencies]
bitcode = { workspace = true, optional = true }
bitflags = { workspace = true }
rand = "0.10.0"
serde = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = "2.0.18"
zstd = { workspace = true, optional = true }